--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     - uses: dtolnay/rust-toolchain@stable
       with:
         toolchain: stable
+    - name: Install cargo wasi
+      run: cargo install cargo-wasi
     - name: Show rust version
       run: rustc --version
     - name: Setup homebrew
