--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,5 @@ jobs:
       uses: Homebrew/actions/setup-homebrew@master
     - name: Install wasmtime and wasmer
       run: brew install wasmtime wasmer
-    - name: Run native benchmark
-      run: cargo bench
-    - name: Run wasmtime benchmark
-      run: cargo wasi bench
-      env:
-        CARGO_TARGET_WASM32_WASI_RUNNER: "wasmtime --dir=."
-    - name: Run wasmer benchmark
-      run: cargo wasi bench
-      env:
-        CARGO_TARGET_WASM32_WASI_RUNNER: "wasmer --dir=."
+    - name: Run benchmarks
+      run: ./run-bench.sh
